--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
@@ -29,8 +29,8 @@
 
         <div class="site">
 	      <div class="header">
-	        <h1 class="title"><a href="{{ site.baseurl }}">{{ site.name }}</a>
-	        	<span style="visibility:hidden;"> Tweak a single line into justifying </span>
+	        <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a>
+	        	<span style="visibility:hidden; line-height:1px; display:inline-block;"> Tweak a single line into justifying </span>
 	        </h1>
 	        <!-- <a class="extra" href="/">home</a> -->
 	      </div>
