--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   padding: 0;
 }
 
-html, body { height: 100%; }
+html, body { height: 100%;}
 
 body {
   background-color: #FFF;
@@ -22,7 +22,11 @@ body {
 
 
 
-h1.title {font-size: 250%; }
+h1.title {
+  font-size: 250%; 
+  line-height: 1em;
+  margin: 0;
+}
 
 h1 {
   font-size: 150%; 
@@ -75,8 +79,10 @@ a:visited { color: #a0a; }
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 42em;
+  max-width: 42em;
   margin: 3em auto 2em;
+  padding-left: 1em;
+  padding-right: 1em;
   line-height: 1.5em;
 }
 
@@ -154,6 +160,10 @@ a:visited { color: #a0a; }
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
+}
+
+div.highlight {
+  overflow-x:scroll;
 }
 
 .post ul, .post ol {
