--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width initial-scale=1.0">
-
+        <meta name="keywords" content="ReactiveCocoa, FRP, iOS, MVVM, ">
+        <meta name="author" content="Sergey Gavrilyuk">
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
