--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
+        <title>{{ site.name | append: " : " | append: page.title }}</title>
         <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <meta name="keywords" content="ReactiveCocoa, FRP, iOS, MVVM, ">
+        <meta name="keywords" content="ReactiveCocoa, FRP, iOS, MVVM">
         <meta name="author" content="Sergey Gavrilyuk">
+        <meta name="description" content="Blog related to ReactiveCocoa design patterns: best practices, hidden gems.">
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
