reconfigured to be working on rcdp.io

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
         <meta name="author" content="Sergey Gavrilyuk">
         <meta name="description" content="Blog related to ReactiveCocoa design patterns: best practices, hidden gems.">
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.url }}/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+        <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 		<script type="text/javascript">
 
 		  var _gaq = _gaq || [];
@@ -31,7 +31,7 @@
 
         <div class="site">
 	      <div class="header">
-	        <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a>
+	        <h1 class="title"><a href="{{ site.url }}/">{{ site.name }}</a>
 	        	<span style="visibility:hidden; line-height:1px; display:inline-block;"> Tweak a single line into justifying </span>
 	        </h1>
 	        <!-- <a class="extra" href="/">home</a> -->
