--- a/_includes/redirect.html
+++ b/_includes/redirect.html
@@ -2,6 +2,6 @@
 	// github doesn't support redirect on apex domain from projects pages,
 	// so I redirect manually.
 	if (document.URL.indexOf("github.io") != -1) {
-		window.location.href = 	document.URL.replace("gavrix.github.io/rcdp", "rcdp");
+		window.location.href = 	document.URL.replace("gavrix.github.io/rcdp", "rcdp.io");
 	}
 </script>
