--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,18 @@ a:visited { color: #a0a; }
 /*
 /*****************************************************************************/
 
+.post_group {
+  display: inline;
+  float: left;  
+  margin: 0 3em;
+  margin-bottom: 3em; 
+}
+
+.post_group ul {
+  padding-left: 1em;
+  margin-top: 1em;
+}
+
 .post_date {
   text-align: right;
   font-size: 80%;
@@ -141,6 +153,7 @@ a:visited { color: #a0a; }
   border-top: 4px solid #eee;
   margin-top: 2em;
   overflow: hidden;
+  clear: left;
 }
 
 .footer .contact {
