Syntax highlight css switched to solarized

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Sergey Gavrilyuk">
         <meta name="description" content="Blog related to ReactiveCocoa design patterns: best practices, hidden gems.">
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.url }}/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.url }}/css/solarized.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.url }}/css/main.css">
