--- a/css/main.css
+++ b/css/main.css
@@ -222,3 +222,25 @@ div.highlight {
 .post pre.terminal code {
   background-color: #333;
 }
+
+blockquote {
+  font-family: Georgia, serif;
+  /*font-size: 18px;*/
+  font-style: italic;
+  width: 500px;
+  margin: 0.25em 0;
+  padding: 0.25em 30px;
+  line-height: 1.45;
+  position: relative;
+  /*color: #383838;*/
+}
+
+blockquote:before {
+  display: block;
+  content: "\201C";
+  font-size: 80px;
+  position: absolute;
+  left: -10px;
+  top: -20px;
+  color: #7a7a7a;
+}
