Endorse on CoderWall button added.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,8 @@
 
 			<div class="footer">
 				Created by Sergey Gavrilyuk <a class="extra" href="https://twitter.com/octogavrix">@octogavrix</a>
+				<br>
+				<a href="https://coderwall.com/gavrix"><img alt="Endorse gavrix on Coderwall" src="https://api.coderwall.com/gavrix/endorsecount.png" /></a>
 			</div>
 		</div>
     </body>
